k8s/linkedin-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkedin-app
spec:
  type: ClusterIP
  selector:
    app: linkedin-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
